<resources>
    <string name="app_name">Car Hire</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">SAC Voting</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="president">Presidencial Results</string>
    <string name="treasurer">Treasurer Results</string>
    <string name="sacsec">Secretary Results</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">About</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="party">Candidates Party</string>
    <string name="category">Category to vie</string>
    <string name="addCandidate">Add Candidate</string>
    <string name="viewvotes">View Votes</string>
    <string name="home">Home</string>
    <string name="adminhome">Admin HomePage</string>
    <string name="addcandidates">Add Candidates</string>
    <string name="vote">Vote</string>
    <string name="allcandidates">All Candidates</string>
    <string name="treasurercandidates">Treasurers</string>
    <string name="secretarycandidates">Secretaries</string>
    <string name="viewvots">View Votes</string>
    <string name="votesadapter">View Votes</string>
    <string name="logout">Logout</string>
    <string name="voting">Vote</string>
    <string name="validate">Validate</string>
    <string name="fingerprint">FingerPrint Activity</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="register">Register</string>
    <string name="dialog_fire_missiles">String</string>


    <string name="title_fingerprint">One-touch to Vote</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="note">(Fingerprint sign in makes your voting much faster and safer. </string>
    <string name="title_activity_home">Fingerprint</string>
    <string name="activity_home_desc">You have successfully logged in with fingerprint authentication</string>
    <string name="activity_home_note">Close and re-open the app to see the fingerprint auth screen again</string>




    <string name="fire">fire</string>
    <string name="cancel">Cancel</string>
    <string name="exec">Executive Committee</string>
    <string name="schools">Non-Executive Committee</string>
    <string name="science">School of Science</string>
    <string name="business">School of Business</string>
    <string name="addparty">Add Party</string>
    <string name="partyname">Party Name</string>
    <string name="partysch">School</string>
    <string name="mem1">Party member 1</string>
    <string name="mem2">Party Member 2</string>
    <string name="mem3">Party Member 3</string>
    <string name="sciencer">School of Science Rep</string>
    <string name="businessr">School of Business Rep</string>
    <string name="namee">SAC Biometric Voting System</string>
    <string name="year">/@2020</string>
    <string name="treasurerh">SAC Treasurer</string>
    <string name="sacsech">SAC Secretary</string>
    <string name="presidenth">SAC President</string>
    <string name="reports">Reports</string>
    <string name="heading">SAC Voting Report - 2020</string>
    <string name="totalvoters">Voters Registered:</string>
    <string name="winners">WINNERS</string>
    <string name="publish">PUBLISH</string>
    <string name="Phone">Phone Number</string>
    <string name="dl">Driver Licence</string>
    <string name="password">Password</string>
    <string name="addcar">Add Car</string>
    <string name="deletecars">Delete Cars</string>
    <string name="vieworders">View My Orders</string>
    <string name="model">Model</string>
    <string name="makeyear">Year of Make</string>
    <string name="color">Color</string>
    <string name="transmossion">Transmission</string>
    <string name="pricep">Price per Day</string>
    <string name="addth">Add Car</string>
    <string name="book">Book Car</string>
    <string name="browse">Browse Vehicles</string>
    <string name="set">Set the Pick Up date and Return Date</string>
    <string name="pick">Set Pick Up Date</string>
    <string name="retuened">Set Return Date</string>
    <string name="orderamount">Order Amount</string>
    <string name="approave">Approave</string>
    <string name="deny">Deny</string>
    <string name="vieworders1">View Orders</string>
    <string name="debit">Load Money</string>
    <string name="account">Account Balance</string>
    <string name="addmonies">Add any amount to your account to be able to order cars</string>
    <string name="depo">Deposit Amount</string>
    <string name="amount">Enter Amount</string>


</resources>

